--- a/csce242/index.html
+++ b/csce242/index.html
@@ -76,6 +76,15 @@
                             <p>This is a javascript assignment to introduce loops.</p>
                         </a>
                     </section>
+                    <section class="one"> 
+                        <a href="assignments/07-javascript-arrays/index.html">
+                            <h3>Assignment 8 - JavaScript Arrays</h3>
+                            <div class="assign-img">
+                                <img src="images/js-array.png" alt="Screenshot of javascript array assignment">
+                            </div>
+                            <p>This is a javascript assignment to introduce arrays.</p>
+                        </a>
+                    </section>
                 </div>
                 <h2>Projects</h2>
                 <div id="projects" class="columns">
